# cherry-pit

./: .gitignore  Cargo.toml  LICENSE  README.md  adr.md  deny.toml  doc-fix.md
.github/workflows/: ci.yml
.opencode/skills/adr-fmt/: SKILL.md
.opencode/skills/adr-forge/: SKILL.md
crates/adr-fmt/: Cargo.toml  PLAN.md  README.md  adr-refactor.md
crates/adr-fmt/src/: config.rs  containment.rs  context.rs  critique.rs  generate.rs  guidelines.rs  main.rs  model.rs  nav.rs  output.rs  parser.rs  report.rs
crates/adr-fmt/src/rules/: index.rs  links.rs  mod.rs  naming.rs  template.rs
crates/adr-fmt/tests/: integration.rs
crates/adr-forge/: Cargo.toml  PLAN.md  README.md  adr-refactor.md
crates/adr-forge/src/: config.rs  containment.rs  guidelines.rs  main.rs  model.rs  output.rs  parser.rs
crates/adr-forge/tests/: integration.rs
crates/cherry-pit-core/: Cargo.toml  README.md
crates/cherry-pit-core/src/: aggregate_id.rs  command.rs  error.rs  event.rs  lib.rs  store.rs
crates/cherry-pit-core/tests/compile_fail/: envelope_no_struct_literal.rs  envelope_no_struct_literal.stderr  gateway_rejects_unhandled_command.rs  handle_non_command.rs  handle_non_command.stderr  wrong_event_store_type.rs  wrong_event_store_type.stderr
crates/cherry-pit-core/tests/fixtures/: envelope_golden.msgpack
crates/cherry-pit-gateway/: Cargo.toml  README.md
crates/cherry-pit-gateway/src/: lib.rs
crates/pardosa/: Cargo.toml  README.md  pardosa-design.md  pardosa.md
crates/pardosa-genome/: Cargo.toml  README.md
crates/pardosa-genome-derive/: Cargo.toml  README.md
crates/pardosa-genome-derive/src/: lib.rs
crates/pardosa-genome/src/: config.rs  error.rs  format.rs  genome_safe.rs  lib.rs
crates/pardosa-genome/tests/: compile_fail_tests.rs  genome_safe.rs
crates/pardosa-genome/tests/compile_fail/: array_usize.rs  array_usize.stderr  btreemap_box_key.rs  btreemap_box_key.stderr  btreemap_non_genome_ord_key.rs  btreemap_non_genome_ord_key.stderr  btreeset_non_genome_ord.rs  btreeset_non_genome_ord.stderr  hashmap_field.rs  hashmap_field.stderr  hashmap_in_btreemap.rs  hashmap_in_btreemap.stderr  hashmap_in_enum.rs  hashmap_in_enum.stderr  hashset_field.rs  hashset_field.stderr  hashset_in_option.rs  hashset_in_option.stderr  isize_field.rs  isize_field.stderr  nested_hashmap.rs  nested_hashmap.stderr  nested_isize.rs  nested_isize.stderr  nested_usize.rs  nested_usize.stderr  ref_hashmap.rs  ref_hashmap.stderr  ref_hashset.rs  ref_hashset.stderr  serde_adjacent_tagged.rs  serde_adjacent_tagged.stderr  serde_default.rs  serde_default.stderr  serde_default_custom_fn.rs  serde_default_custom_fn.stderr  serde_default_enum_variant.rs  serde_default_enum_variant.stderr  serde_default_field.rs  serde_default_field.stderr  (+14 more)
crates/pardosa-genome/tests/compile_pass/: benign_serde_attrs.rs  btreemap_custom_genome_ord_key.rs  btreemap_derive_generic_key.rs  btreemap_in_enum_variant.rs  btreemap_mixed_generics.rs  btreemap_nested_in_vec.rs  btreemap_tuple_key.rs  field_named_flatten.rs  field_renamed_to_tag.rs
crates/pardosa/src/: dot.rs  dragline.rs  error.rs  event.rs  fiber.rs  fiber_state.rs  lib.rs
crates/pit-core/: Cargo.toml
crates/pit-core/src/: aggregate.rs  aggregate_id.rs  bus.rs  correlation.rs  error.rs  event.rs  gateway.rs  lib.rs  policy.rs  projection.rs  store.rs
crates/pit-gateway/: Cargo.toml
crates/pit-gateway/src/: lib.rs
crates/pit-gateway/src/event_store/: msgpack_file.rs
docs/: agent-guidance.md  automerge-ideas.md  build-plan.md  c4-level3.dot  glossary.md  infrastructure.md  pit-core.md
docs/adr/: .gnd-audit-secondary-refs.md  0001-design-priority-ordering.md  0001-event-sourcing-ddd-hexagonal.md  0002-illegal-states-unrepresentable.md  0002-single-aggregate-design.md  0003-compile-time-error-preference.md  0003-single-writer-assumption.md  0004-eda-ddd-hexagonal.md  0004-event-sourcing-ddd-hexagonal.md  0004-rpitit-over-async-trait.md  0005-single-aggregate-design.md  0005-store-created-envelopes.md  0006-aggregate-id-non-zero-u64.md  0006-single-writer-assumption.md  0007-forbid-unsafe-code.md  0007-infallible-apply.md  0008-create-send-split.md  0008-pure-command-handling.md  0009-cargo-workspace-crate-dag.md  0009-infallible-apply.md  0010-commands-not-serializable.md  0010-domain-event-supertrait-bounds.md  0011-aggregate-id-non-zero-u64.md  0012-aggregate-default-zero-state.md  0013-create-send-split.md  0014-commands-not-serializable.md  0015-error-type-per-command.md  0016-store-created-envelopes.md  0017-policy-output-static-type.md  0018-sync-domain-async-infrastructure.md  0019-load-returns-empty-not-error.md  0020-infrastructure-owned-identity.md  0021-non-exhaustive-errors.md  0022-event-schema-evolution.md  0023-aggregate-lifecycle-states.md  0024-event-delivery-model.md  0025-rpitit-over-async-trait.md  0026-correctness-first-build-config.md  0027-manual-error-impls.md  0028-compile-fail-type-contracts.md  (+28 more)
docs/adr/adr-fmt/: AFM-0001-ssot-architecture-for-adr-governance.md  AFM-0002-manual-cli-argument-parsing.md  AFM-0003-advisory-only-validation.md  AFM-0004-template-defined-in-code.md  AFM-0005-marker-protected-safe-write.md  AFM-0006-regex-based-markdown-parsing.md  AFM-0007-compiler-style-diagnostics.md  AFM-0008-domain-scoped-prefix-naming.md  AFM-0009-minimal-relationship-vocabulary.md  AFM-0010-tier-system-architectural-significance.md  AFM-0011-meadows-aligned-tier-classification.md  AFM-0012-per-rule-meadows-layer-annotation.md  AFM-0013-clap-derived-cli-argument-parsing.md  AFM-0014-unified-markdown-output-on-stdout.md  AFM-0015-foundation-domain-inclusion-in-context-resolution.md  AFM-0016-strict-path-containment.md  AFM-0017-parser-stage-diagnostic-namespace.md  README.md  (+2 more)
docs/plans/: adr-improvements.md  adr-quality-refinements.md  build-plan.md  cherry-pit-core.md  genome.md  glossary.md  infrastructure.md  pardosa-development-research.md  pardosa-next.md  top-10-distributed-improvements.md  top-10-pardosa-alignment.md
scripts/: apply_ref_changes.py  gen-adr-graph.py  rank_adr_refs.py  suggest_ref_changes.py
(+246 files in other folders)
