[workspace]
resolver = "3"
members = [
    "crates/pit-core",
    # "crates/pardosa-genome",
    # "crates/pardosa-genome-derive",
    # "crates/pardosa",
    "crates/pit-gateway",
    # "crates/pit-web",
    # "crates/pit-projection",
    # "crates/pit-agent",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/acje/cherry-pit"
authors = ["Anders Jensen <anders.jensen@users.noreply.github.com>"]

[workspace.dependencies]
# === Internal crates ===
pit-core = { path = "crates/pit-core" }
pit-gateway = { path = "crates/pit-gateway" }
pardosa-genome = { path = "crates/pardosa-genome" }
pardosa-genome-derive = { path = "crates/pardosa-genome-derive" }
pardosa = { path = "crates/pardosa" }

# === Async runtime ===
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

# === Serialization ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# === Time ===
jiff = { version = "0.2", features = ["serde"] }

# === Identity ===
uuid = { version = "1", features = ["v7", "serde"] }

# === Web framework and serving ===
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "tokio", "json", "ws"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }

# === Zero-copy byte buffers ===
bytes = "1"

# === Stream utilities ===
futures-util = "0.3"

# === Logging / tracing ===
tracing = "0.1"

# === Error handling ===
thiserror = "2"

# === Hashing ===
sha2 = "0.11"

# === Concurrency ===
arc-swap = "1"
scc = "3"

# === NATS ===
async-nats = "0.47"

# === Proc macro support ===
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# === Dev dependencies ===
proptest = "1"
tempfile = "3"
tokio-test = "0.4"
tokio-tungstenite = "0.29"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "json", "gzip"] }
trybuild = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
overflow-checks = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
