[package]
name = "adr-fmt"
version = "0.1.0"
description = "ADR template and link-integrity validator for cherry-pit"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
