[package]
name = "cherry-pit-core"
version = "0.1.0"
description = "Foundational traits for cherry-pit: aggregates, commands, events, ports"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
trybuild = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
