[package]
name = "pardosa-genome-derive"
version = "0.1.0"
description = "Derive macro for pardosa-genome GenomeSafe trait"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
