[package]
name = "pit-gateway"
version = "0.1.0"
description = "Infrastructure implementations for cherry-pit: event stores, command bus, gateways"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pit-core = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
uuid = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
